--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -1,55 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colortheme">
-    <RelativeLayout
+
+    <ImageView
+        android:id="@+id/iv_bg_round"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/margin_mfifty"
+        android:layout_marginTop="@dimen/margin_msixty"
+        android:src="@drawable/bg_round_shape"
+
+        />
+
+    <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <ImageView
-            android:id="@+id/iv_bg_round"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_msixty"
-            android:layout_marginLeft="@dimen/margin_mfifty"
-            android:src="@drawable/bg_round_shape"
+        android:layout_height="128dp"
+        android:background="@android:color/transparent"
+        app:elevation="@dimen/margin_zero">
 
-            />
-        <org.mmtextview.components.MMTextView
-            android:id="@+id/tv_title"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:textColor="@color/color_white"
-            android:textSize="@dimen/text_heading_1x"
-            android:layout_marginTop="@dimen/margin_xxlarge"
-            android:layout_marginLeft="@dimen/margin_xlarge"
-            android:text="@string/tv_main_title"/>
-        <LinearLayout
-            android:id="@+id/et_layout"
-            android:layout_below="@id/tv_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true">
-        <EditText
-            android:id="@+id/et_search"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-
-            android:layout_marginRight="@dimen/margin_xlarge"
-            android:layout_below="@id/tv_title"
-            android:drawableRight="@drawable/ic_search_black_24dp"
-            android:drawableTint="@color/color_white"/>
-        </LinearLayout>
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_restaurants"
-            android:layout_below="@+id/et_layout"
+        <com.google.android.material.appbar.CollapsingToolbarLayout
             android:layout_width="match_parent"
-            android:layout_marginTop="@dimen/margin_xlarge"
-            android:layout_marginBottom="@dimen/margin_xxlarge"
-            android:layout_height="wrap_content">
-
-        </androidx.recyclerview.widget.RecyclerView>
+            android:layout_height="match_parent">
 
 
-    </RelativeLayout>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <org.mmtextview.components.MMTextView
+                    android:id="@+id/tv_title"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/margin_xlarge"
+                    android:layout_marginTop="@dimen/margin_xxlarge"
+                    android:text="@string/tv_main_title"
+                    android:textColor="@color/color_white"
+                    android:textSize="@dimen/text_heading_1x" />
+
+
+                <EditText
+
+                    android:id="@+id/et_search"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/tv_title"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="@dimen/margin_xlarge"
+                    android:layout_toRightOf="@id/tv_title"
+                    android:drawableRight="@drawable/ic_search_black_24dp" />
+            </RelativeLayout>
+        </com.google.android.material.appbar.CollapsingToolbarLayout>
+    </com.google.android.material.appbar.AppBarLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_restaurants"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/margin_xlarge"
+        android:layout_marginBottom="@dimen/margin_xxlarge"
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
+
+    </androidx.recyclerview.widget.RecyclerView>
+
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
