--- a/app/src/main/res/layout/fragment_restaurant_detail.xml
+++ b/app/src/main/res/layout/fragment_restaurant_detail.xml
@@ -29,11 +29,17 @@
         android:src="@drawable/ic_near_me_black_24dp"
         app:borderWidth="0dp"
         app:elevation="-4dp" />
-
-    <TextView
-        android:id="@+id/tv_restaurant_detail"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/tv_restaurant_name"
+        android:layout_above="@+id/linear_layout"
+        android:layout_marginTop="@dimen/margin_medium_3"
+       >
+    <TextView
+        android:id="@+id/tv_restaurant_detail_desc"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_below="@id/tv_restaurant_name"
         android:layout_alignLeft="@id/tv_restaurant_name"
         android:layout_alignRight="@id/fab1"
@@ -41,12 +47,14 @@
         android:text="@string/tv_description2"
         android:textColor="@color/color_white"
         android:textSize="@dimen/text_regular" />
-
+    </ScrollView>
 
     <LinearLayout
+        android:id="@+id/linear_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tv_restaurant_detail"
+
+        android:layout_alignParentBottom="true"
         android:layout_alignLeft="@id/tv_restaurant_name"
         android:layout_alignRight="@id/fab1"
         android:orientation="horizontal"
